@@ -8,7 +8,7 @@ log4j.rootLogger=error,logfile
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.Append=true
 log4j.appender.logfile.File=logs/root.log
-log4j.appender.logfile.MaxFileSize=3000KB
+log4j.appender.logfile.MaxFileSize=100MB
 log4j.appender.logfile.MaxBackupIndex=1
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
